--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*4*/
+
 body{
     
     font-family: "Montserrat", serif;
@@ -174,6 +174,7 @@ body{
     border-top: 1px solid white;
     opacity: 0.5;
 }
+/*Footer patr*/
 .music-bar{
     display: flex;
     justify-content: center;
