--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ body{
 input[type="range"]::-webkit-slider-runnable-track{
     background-color: #ddd;
     height: 0.25em;;
-    border-radius:100px;
+    border-radius:50%;
 }
 input[type="range"]::-webkit-slider-thumb{
     appearance: none;
